--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello Github!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>测试页</title>
+</head>
+<body>
+    <h1>Toddler的个人主页</h1>
+    <h1>Hello ~</h1>
+</body>
+</html>
